Add missing dep

--- a/package.json
+++ b/package.json
@@ -2,7 +2,15 @@
   "name": "eacs-tag-auth",
   "version": "1.0.0",
   "description": "Extensible Access Control System. RFID Tag Authentication Module.",
-  "keywords": ["eacs", "acs", "access control", "rfid", "nfc", "tag", "authentication"],
+  "keywords": [
+    "eacs",
+    "acs",
+    "access control",
+    "rfid",
+    "nfc",
+    "tag",
+    "authentication"
+  ],
   "main": "dist/index.js",
   "scripts": {
     "test": "mocha -r ts-node/register -r tsconfig-paths/register --recursive src/**/*.spec.ts",
@@ -49,6 +57,7 @@
     "@types/winston": "^2.3.7",
     "@types/ws": "^4.0.0",
     "chai": "^4.1.2",
+    "coveralls": "^3.0.0",
     "mocha": "^5.0.5",
     "nodemon": "^1.14.12",
     "nyc": "^11.6.0",
