--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "test": "mocha -r ts-node/register -r tsconfig-paths/register --recursive src/**/*.spec.ts",
     "cover": "nyc npm test",
+    "clean": "rimraf dist",
     "start": "npm run build:live",
     "build:live": "nodemon --exec ts-node --type-check -r tsconfig-paths/register ./src/index.ts",
     "build": "tsc"
@@ -56,6 +57,10 @@
     "@types/node": "^8.9.1",
     "@types/winston": "^2.3.7",
     "@types/ws": "^4.0.0",
+    "@types/command-line-args": "^4.0.2",
+    "@types/command-line-usage": "^5.0.0",
+    "npm-run-all": "^4.1.2",
+    "rimraf": "^2.6.2",
     "chai": "^4.1.2",
     "coveralls": "^3.0.0",
     "mocha": "^5.0.5",
@@ -66,6 +71,9 @@
     "typescript": "^2.7.1"
   },
   "dependencies": {
+    "command-line-args": "^5.0.2",
+    "command-line-usage": "^5.0.4",
+    "jsonwebtoken": "^8.2.0",
     "modular-json-rpc": "^1.0.6",
     "winston": "^2.4.0",
     "ws": "^4.0.0"
